[build-system]
requires = ["cmake", "setuptools>=64", "packaging>=20.0", "typing_extensions", "wheel", "setuptools-scm"]
build-backend = "backend"
backend-path = ["_custom_build"]

[project]
name = "pyfes"
description = "Tidal constituents analysis in Python"
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    {name = "CNES/CLS/LEGOS", email = "fbriol@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Physics",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy",
    "netCDF4",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/CNES/pangeo-pyfes"

[project.scripts]
fes_convert_mesh = "pyfes.console_scripts.fes_convert_mesh:main"

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages]
find = {where = ["src"]}

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
pyfes = [
    "py.typed",
    "core/*.pyi",
]
"*" = ["py.typed"]

[tool.setuptools_scm]

[tool.ruff]
target-version = "py312"
line-length = 80
exclude = ["*.pyi", "docs", "docs/**"]

[tool.ruff.lint.pycodestyle]
max-line-length = 80

[tool.ruff.lint]
ignore = ["D203", "D213"]
select = [
  "ANN",    # flake8-annotations
  "B",      # flake8-bugbear
  "C",      # flake8-comprehensions
  "C4",     # comprehensions
  "C90",    # mccabe
  "D",      # docstring lints
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "FA",     # flake8-future-annotations
  "FLY",    # flynt
  "G",      # flake8-logging-format
  "I",      # isort
  "INT",    # flake8-gettext
  "NPY002", # numpy-legacy-random
  "PERF",   # Perflint
  "PGH",    # pygrep-hooks
  "PIE",    # misc lints
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PYI",    # flake8-pyi
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific rules
  "SLOT",   # flake8-slots
  "T10",    # flake8-debugger
  "TCH",    # type-checking imports
  "W",      # pycodestyle warnings
  "YTT",    # flake8-2020
]

[tool.ruff.lint.per-file-ignores]
"**/{tests,examples}/**" = ["D", "S", "ANN", "PLR"]

[tool.ruff.lint.isort]
force-to-top = ["typing", "collections.abc"]
lines-after-imports = 2
known-first-party = ["pyfes"]
split-on-trailing-comma = false
combine-as-imports = true
force-sort-within-sections = true


# ---------------------------------------------------------------------------
# cibuildwheel — binary wheel configuration
# Run with: pipx run cibuildwheel --platform linux  (local test)
# Triggered by: .github/workflows/wheels.yml
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
# Build CPython 3.11–3.14 (+ 3.14 free-threaded); skip 32-bit and musl builds.
build = "cp311-* cp312-* cp313-* cp314-* cp314t-*"
skip = ["*-win32", "*-manylinux_i686", "*-musllinux*"]
build-verbosity = 1
# Opt into free-threaded (cp*t-*) builds and the still-pre-release cp314 matrix.
enable = ["cpython-freethreading", "cpython-prerelease"]

# ------------------------------------------------------------------
# Linux (manylinux_2_28 — AlmaLinux 8, glibc ≥ 2.28, gcc ≥ 12)
# Boost (>=1.79) and Eigen (>=3.4) are installed via miniforge inside the
# container because the default AlmaLinux repos do not always ship recent
# enough versions.
# ------------------------------------------------------------------
[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
before-all = """
curl -fsSL \
  "https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-Linux-$(uname -m).sh" \
  -o /tmp/miniforge.sh \
  && bash /tmp/miniforge.sh -b -p /opt/conda \
  && /opt/conda/bin/conda install -y -c conda-forge 'libboost-headers' 'eigen'
"""
environment = {CMAKE_PREFIX_PATH = "/opt/conda"}

# ------------------------------------------------------------------
# macOS (arm64 only; free Intel runners are deprecated).
# brew installs both Boost and Eigen.
# ------------------------------------------------------------------
[tool.cibuildwheel.macos]
before-all = "brew install boost eigen || true"
environment = {MACOSX_DEPLOYMENT_TARGET = "13.4", CMAKE_PREFIX_PATH = "$(brew --prefix boost):$(brew --prefix eigen)"}

# ------------------------------------------------------------------
# Windows
# Boost and Eigen headers are installed via mamba-org/setup-micromamba
# before cibuildwheel runs (see wheels.yml). The conda prefix is forwarded
# via CIBW_ENVIRONMENT_WINDOWS in the workflow env block.
# ------------------------------------------------------------------

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
