[flake8]
exclude = docs,tests
max-line-length = 80
ignore =
    # Assigning lambda expression
    E731
    # Ambiguous variable names
    E741
    # line break before binary operator
    W503
    # line break after binary operator
    W504
    # whitespace before :
    E203

[isort]
combine_as_imports = True
force_grid_wrap = 0
force_sort_within_sections = True
force_to_top = typing
include_trailing_comma = True
line_length = 80
multi_line_output = 3
skip=
    build
    docs/source/conf.py

[metadata]
author = CNES/CLS/LEGOS
author_email = fbriol@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering :: Physics
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
description = Tidal constituents analysis in Python
url = https://github.com/CNES/pangeo-pyfes
license = BSD-3-Clause
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
name = pyfes
platforms = MacOS, Linux, Windows
version = attr: pyfes.version.__version__

[options]
console_scripts =
    fes_convert_mesh = pyfes.console_scripts.fes_convert_mesh:main
install_requires =
    numpy
    netCDF4
package_dir =
    = src/python
packages = find:
python_requires = >=3.10
zip_safe = False

[options.packages.find]
where = src/python
exclude =
    pyfes.core
